--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Stream_Chat_Application</string>
-    <string name="api_key">y7n82w7xycwa</string>
+    <string name="api_key">gwuensj4rs3x</string>
     <string name="confirm">Confirm</string>
     <string name="login">Login</string>
     <string name="your_name">Your name</string>
